fix pitch title overflow to scroll and set each pitch in pitches index to fixed width

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -147,10 +147,7 @@ footer {
   }
 }
 
+// bottom link on pitch edit error view
 .error-back {
   text-align: center;
-}
-
-.panel-footer {
-  overflow: scroll;
 }
